// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contain hidden class when menu is not open 1`] = `
<div
  class="w-full lg:inline-flex lg:flex-grow lg:w-auto hidden"
  data-testid="menu"
>
  <div
    class="lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto w-full lg:items-center items-start flex flex-col lg:h-auto"
  >
    <a
      class="w-full px-3 py-2 rounded text-gray-400 hover:bg-gray-900 hover:text-white"
      href="/props"
    >
      <span>
        Props
      </span>
    </a>
    <a
      class="w-full px-3 py-2 rounded text-gray-400 hover:bg-gray-900 hover:text-white"
      href="/context"
    >
      <span>
        Context
      </span>
    </a>
    <a
      class="w-full px-3 py-2 rounded text-gray-400 hover:bg-gray-900 hover:text-white"
      href="/redux"
    >
      <span>
        Redux
      </span>
    </a>
  </div>
</div>
`;

exports[`not contain hidden class when menu is open 1`] = `
<div
  class="w-full lg:inline-flex lg:flex-grow lg:w-auto"
  data-testid="menu"
>
  <div
    class="lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto w-full lg:items-center items-start flex flex-col lg:h-auto"
  >
    <a
      class="w-full px-3 py-2 rounded text-gray-400 hover:bg-gray-900 hover:text-white"
      href="/props"
    >
      <span>
        Props
      </span>
    </a>
    <a
      class="w-full px-3 py-2 rounded text-gray-400 hover:bg-gray-900 hover:text-white"
      href="/context"
    >
      <span>
        Context
      </span>
    </a>
    <a
      class="w-full px-3 py-2 rounded text-gray-400 hover:bg-gray-900 hover:text-white"
      href="/redux"
    >
      <span>
        Redux
      </span>
    </a>
  </div>
</div>
`;
